--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -272,21 +272,146 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiantes_2 = [\"Rene\",\"Aleberto\",\"Teresa\",\"Juan\",\"Carlos\"]"
+      ],
       "metadata": {
         "id": "Y4o2AvhWNBdM"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from random import choice\n",
+        "random_estudiante = choice(estudiantes_2)\n",
+        "random_estudiante"
+      ],
       "metadata": {
-        "id": "9fXfsVnANBiG"
+        "id": "9fXfsVnANBiG",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "730dfa50-d339-4cfb-dfab-b2ca0eb2cafa"
       },
-      "execution_count": null,
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Carlos'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2 - Escribe un código para importar la biblioteca numpy con el alias np.\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "FI_RWwdQLaez"
+      },
+      "execution_count": 24,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#3 - Crea un programa que lea la siguiente lista de números y elija uno al azar.\n",
+        "lista = [8, 12, 54, 23, 43, 1, 90, 87, 105, 77]\n",
+        "random_lista = choice(lista)\n",
+        "random_lista"
+      ],
+      "metadata": {
+        "id": "KvlCG7o4L-mI",
+        "outputId": "dcfa5816-0588-436b-f75a-8a5c9f7c193f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#4 - Crea un programa que genere aleatoriamente un número entero menor que 100.\n",
+        "from random import randint\n",
+        "random_entero = randint(1, 100)\n",
+        "random_entero"
+      ],
+      "metadata": {
+        "id": "zxcGUlLPNKEJ",
+        "outputId": "8e1a88e9-997b-4009-9c61-f34c3e31d417",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "66"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#5 - Crea un programa que solicite a la persona usuaria ingresar dos números enteros y calcule la potencia del primer número elevado al segundo.\n",
+        "from math import pow\n",
+        "\n",
+        "numero_1 = int(input(\"Ingrese primer numero: \"))\n",
+        "numero_2 = int(input(\"Ingrese segundo numero\"))\n",
+        "print(f\"la potencia de {numero_1} elevado a {numero_2} es: {pow(numero_1, numero_2)}\")"
+      ],
+      "metadata": {
+        "id": "EZdmZHm2PFtH",
+        "outputId": "84cc7338-a10f-4535-a957-602cc8595230",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese primer numero: 5\n",
+            "Ingrese segundo numero10\n",
+            "la potencia de 5 elevado a 10 es: 9765625.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
